# nix-haskell-deep-learning

./: README.md  default.nix  nix-haskell.cabal  nixos-20-03.json  release.nix  release2.nix  shell.nix  shell2.nix  toggle-hoogle.nix
src/: Lib.hs  Main.hs
src/BackpropAutoDifferentiation/: $Notes.html  AD.hs  Notes.md
src/NeuralNetworkFromScratch/: NNFS.hs
